Added Gradle as build tool

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 hs_err_pid*
 .settings/
 /bin/
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
